--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
   <body>
     <div id="root"></div>
+
+<script src='https://gumlet-team.myfreshworks.com/crm/sales/web_forms/7afc54c6287eef697898c6beef6f39d2555b4dc0831191312f62aa3941e42a3b/form.js' crossorigin='anonymous' id='fs_7afc54c6287eef697898c6beef6f39d2555b4dc0831191312f62aa3941e42a3b'></script>
+
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
