working on given changes

--- a/index.html
+++ b/index.html
@@ -1,16 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-KPS353Z");
+    </script>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="src\assets\round-logo-1608271496624.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <title>Gumlet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPS353Z"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript">
+      !(function () {
+        "use strict";
+        var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
+        var sdkName = "rsa.min.js";
+        var asyncScript = true;
+        (window.rudderAnalyticsBuildType = "legacy"),
+          (window.rudderanalytics = []);
+        var e = [
+          "setDefaultInstanceKey",
+          "load",
+          "ready",
+          "page",
+          "track",
+          "identify",
+          "alias",
+          "group",
+          "reset",
+          "setAnonymousId",
+          "startSession",
+          "endSession",
+        ];
+        for (var t = 0; t < e.length; t++) {
+          var n = e[t];
+          window.rudderanalytics[n] = (function (e) {
+            return function () {
+              window.rudderanalytics.push(
+                [e].concat(Array.prototype.slice.call(arguments))
+              );
+            };
+          })(n);
+        }
+        try {
+          new Function('return import("")'),
+            (window.rudderAnalyticsBuildType = "modern");
+        } catch (a) {}
+        if (
+          ((window.rudderAnalyticsMount = function () {
+            "undefined" == typeof globalThis &&
+              (Object.defineProperty(Object.prototype, "globalThis_magic", {
+                get: function get() {
+                  return this;
+                },
+                configurable: true,
+              }),
+              (globalThis_magic.globalThis = globalThis_magic),
+              delete Object.prototype.globalThis_magic);
+            var e = document.createElement("script");
+            (e.src = ""
+              .concat(sdkBaseUrl, "/")
+              .concat(window.rudderAnalyticsBuildType, "/")
+              .concat(sdkName)),
+              (e.async = asyncScript),
+              document.head
+                ? document.head.appendChild(e)
+                : document.body.appendChild(e);
+          }),
+          "undefined" == typeof Promise || "undefined" == typeof globalThis)
+        ) {
+          var d = document.createElement("script");
+          (d.src =
+            "https://polyfill.io/v3/polyfill.min.js?features=Symbol%2CPromise&callback=rudderAnalyticsMount"),
+            (d.async = asyncScript),
+            document.head
+              ? document.head.appendChild(d)
+              : document.body.appendChild(d);
+        } else {
+          window.rudderAnalyticsMount();
+        }
+        window.rudderanalytics.load(
+          "2ZBQbJSHDomvyvEE9F8r7d4b56i",
+          "https://gumletadiwyaq.dataplane.rudderstack.com",
+          {}
+        );
+      })();
+    </script>
   </body>
 </html>
