--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="src\assets\round-logo-1608271496624.png"
+      href="\round-logo-1608271496624.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gumlet</title>
