--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="\round-logo-1608271496624.png"
+      href="https://i.ibb.co/MpdSSjv/round-logo-1608271496624.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gumlet</title>
@@ -29,8 +29,14 @@
     />
   </head>
   <body>
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPS353Z"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KPS353Z"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="text/javascript">
