--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script>
+<!--     <script>
       const RudderAnalytics = require("@rudderstack/rudder-sdk-node");
 
       const client = new RudderAnalytics("2ZBQbJSHDomvyvEE9F8r7d4b56i", {
         dataPlaneUrl: "https://gumletadiwyaq.dataplane.rudderstack.com",
       });
-    </script>
+    </script> -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -46,7 +46,7 @@
     ></noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
       !(function () {
         "use strict";
         var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
@@ -121,6 +121,6 @@
           {}
         );
       })();
-    </script>
+    </script> -->
   </body>
 </html>
